--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -532,6 +532,7 @@ const db = firebase.firestore();
                 `;
                 orderList.appendChild(orderDiv);
             });
+            checkForSameAddressOrders(orders);
         }
 
         function updateMap(orders) {
@@ -939,7 +940,7 @@ function getCourierIcon(courierName, status) {
             modal.style.display = 'block';
         }
 
-   function printPriorityOrders() {
+function printPriorityOrders() {
             const printWindow = window.open('', '', 'height=400,width=600');
             let printContent = '<html><head><title>Pedidos Prioritários</title></head><body>';
             printContent += '<h3>Pedidos Prioritários</h3>';
@@ -988,21 +989,32 @@ function getCourierIcon(courierName, status) {
 
         function checkForSameAddressOrders(orders) {
             const sameAddressMap = {};
+            const locationMap = {};
+
             orders.forEach(order => {
                 const address = `${order.deliveryPoint.street} ${order.deliveryPoint.houseNumber}`;
+                const location = `${order.deliveryPoint.coordinates.lat},${order.deliveryPoint.coordinates.lng}`;
+                
                 if (!sameAddressMap[address]) {
                     sameAddressMap[address] = [];
                 }
                 sameAddressMap[address].push(order);
+
+                if (!locationMap[location]) {
+                    locationMap[location] = [];
+                }
+                locationMap[location].push(order);
             });
 
             for (const [address, addressOrders] of Object.entries(sameAddressMap)) {
                 if (addressOrders.length > 1) {
-                    const orderIds = addressOrders.map(order => order.id).join('-');
-                    if (!shownSameAddressNotifications.has(orderIds)) {
-                        showSameAddressPopup(address, addressOrders);
-                        shownSameAddressNotifications.add(orderIds);
-                    }
+                    showSameAddressPopup(address, addressOrders);
+                }
+            }
+
+            for (const [location, locationOrders] of Object.entries(locationMap)) {
+                if (locationOrders.length > 1) {
+                    showSameAddressPopup(`Localização: ${location}`, locationOrders);
                 }
             }
         }
