--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -393,9 +393,13 @@ function loadDataFromLocalStorage() {
             return date.toISOString().replace(/\.\d{3}Z$/, '-03:00');
         }
 
-function isWithinTimeRange(date) {
-    return true;
-}
+        function isWithinTimeRange(date) {
+            const hour = date.getHours();
+            const minutes = date.getMinutes();
+            const totalMinutes = hour * 60 + minutes;
+            return totalMinutes >= 01 * 60 + 30 && totalMinutes <= 22 * 60 + 30;
+        }
+
         async function fetchOrders() {
             try {
                 const now = new Date();
@@ -412,9 +416,27 @@ function isWithinTimeRange(date) {
                     }
                 });
                 console.log('Pedidos recebidos:', response.data);
-                allOrdersToday = response.data
-                
-   
+                allOrdersToday = response.data.filter(order => {
+                    const orderDate = new Date(order.creationDate);
+                    return isWithinTimeRange(orderDate);
+                });
+                const filteredOrders = allOrdersToday.filter(order => 
+                    ['open', 'accepted', 'ready', 'onGoing', 'dispatched', 'cancelled'].includes(order.status)
+                );
+                currentOrders = filteredOrders;
+                updateOrderList(currentOrders);
+                updateMap(currentOrders);
+                updateDashboard(allOrdersToday);
+                updatePrepTimes(currentOrders);
+                updateCourierDeliveries(allOrdersToday);
+                checkForCancelledOrders(currentOrders);
+                fetchYesterdayOrders();
+                saveDataToLocalStorage();
+            } catch (error) {
+                console.error('Erro ao buscar pedidos:', error);
+                document.getElementById('orderList').innerHTML = '<p class="error">Erro ao carregar pedidos. Por favor, tente novamente mais tarde.</p>';
+            }
+        }
 
         async function fetchYesterdayOrders() {
             try {
