--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -248,6 +248,19 @@
             font-weight: bold;
             color: #27ae60;
         }
+        .hide-notification-button {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 12px;
+            margin-top: 10px;
+        }
+        .hide-notification-button:hover {
+            background-color: #2980b9;
+        }
     </style>
 </head>
 <body>
@@ -314,6 +327,7 @@
     <div id="sameAddressPopup" class="same-address-popup">
         <span class="close" onclick="closeSameAddressPopup()">&times;</span>
         <p id="sameAddressMessage"></p>
+        <button class="hide-notification-button" onclick="hideSameAddressNotification()">Ocultar notificação</button>
     </div>
 
     <script>
@@ -330,7 +344,7 @@
         };
         firebase.initializeApp(firebaseConfig);
 
- const db = firebase.firestore();
+   const db = firebase.firestore();
         let map;
         let heatmap;
         let markers = {};
@@ -359,6 +373,7 @@
         let sameAddressOrders = {};
         let shownSameAddressNotifications = new Set();
         let lastShownNotificationTime = 0;
+        let hideNotification = false;
 
         function saveDataToLocalStorage() {
             localStorage.setItem('orderPrepTimes', JSON.stringify(orderPrepTimes));
@@ -374,6 +389,7 @@
             localStorage.setItem('sameAddressOrders', JSON.stringify(sameAddressOrders));
             localStorage.setItem('shownSameAddressNotifications', JSON.stringify(Array.from(shownSameAddressNotifications)));
             localStorage.setItem('lastShownNotificationTime', lastShownNotificationTime.toString());
+            localStorage.setItem('hideNotification', hideNotification.toString());
         }
 
         function loadDataFromLocalStorage() {
@@ -415,6 +431,9 @@
 
             const storedLastShownNotificationTime = localStorage.getItem('lastShownNotificationTime');
             if (storedLastShownNotificationTime) lastShownNotificationTime = parseInt(storedLastShownNotificationTime);
+
+            const storedHideNotification = localStorage.getItem('hideNotification');
+            if (storedHideNotification) hideNotification = storedHideNotification === 'true';
         }
 
         function initMap() {
@@ -445,10 +464,7 @@
         }
 
         function isWithinTimeRange(date) {
-            const hour = date.getHours();
-            const minutes = date.getMinutes();
-            const totalMinutes = hour * 60 + minutes;
-            return totalMinutes >= 10 * 60 + 30 && totalMinutes <= 22 * 60 + 30;
+            return true; // Permitir pedidos a qualquer hora
         }
 
         async function fetchOrders() {
@@ -630,7 +646,7 @@
                         });
                         markers[`courier-${order.courier.courierName}`] = courierMarker;
 
-courierMarker.addListener('click', () => {
+  courierMarker.addListener('click', () => {
                             showCourierDetails(order, tracking);
                         });
                     } else {
@@ -944,7 +960,7 @@ courierMarker.addListener('click', () => {
             modal.style.display = 'block';
         }
 
- function printPriorityOrders() {
+  function printPriorityOrders() {
             const printWindow = window.open('', '', 'height=400,width=600');
             let printContent = '<html><head><title>Pedidos Prioritários</title></head><body>';
             printContent += '<h3>Pedidos Prioritários</h3>';
